[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/fonts/necro_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/fonts/necro_Text_dfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/TextButton.gd" type="Script" id=3]

[node name="PlayButton" type="Button"]
margin_right = 96.0
margin_bottom = 46.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Play"
flat = true
script = ExtResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_PlayButton_pressed"]
